--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base16ct = { version = "0.2.0", features = ["alloc"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
+sha2 = "0.10.8"
 tar = "0.4"
